<resources>
    // General
    <string name="app_name">Bilkent Halısaha</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    // Home Fragment
    <string name="homepage_title">Bilkent Halısaha</string>
    <string name="welcome_message">Hello, %1$s!\n%2$s</string>

    // Matches Fragment
    <string name="matches_page_title">Existing Matches</string>
    <string name="resend">Resend</string>
    <string name="refresh">Refresh</string>

    // Profile Fragment
    <string name="profile_page_title">Profile</string>

    // Rate Players Fragment
    <string name="rate_players_page_title">Rate Players</string>

    //Login Fragment
    <string name="sing_in">Sign In</string>
    <string name="email">Email (Bilkent Mail)</string>
    <string name="password">   Password</string>
    <string name="not_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>

    //Signup Fragment
    <string name="first_name">   First Name</string>
    <string name="last_name">   Last Name</string>
    <string name="sing_up">Sign Up</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>

    // Home
    <string name="weather">Weather</string>
    <string name="weather_type">Sunny</string>
    <string name="degree">23 °C</string>

    // Email Verification
    <string name="email_verification">Verify Your Email</string>
    <string name="go_sign_up_back">Return sign up?</string>

    // Create Match
    <string name="pitch">Pitch</string>
    <string name="date_and_time">Date and Time</string>
    <string name="number_of_players">Number of Players per Team</string>
    <string name="your_position">Your Position</string>
    <string name="create_button">Create</string>

    //Formation
    <string name="example_pitch_info">East Campus</string>
    <string name="example_date_and_time_info">15 December 16.00</string>
    <string name="example_weather_info">Sunny (14.8 °C)</string>

    <string-array name="locations_array">
        <item>Central Campus 1</item>
        <item>Central Campus 2</item>
        <item>East Campus</item>
    </string-array>

    <string-array name="ratings_array">
        <item>No Rating</item>
        <item>Not Attended</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="number_of_players">
        <item>6</item>
    </string-array>

    <string-array name="positions_array">
        <item>Goalkeeper</item>
        <item>Defender 1</item>
        <item>Defender 2</item>
        <item>Midfielder</item>
        <item>Forward 1</item>
        <item>Forward 2</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_weather_data">No Weather Data</string>
</resources>